--- a/Shooter_G/shooter.html
+++ b/Shooter_G/shooter.html
@@ -32,7 +32,6 @@ canvas {
 </audio>
 
 <canvas id="cv" width="500" height="500"></canvas>
-
 <script src="explode.js"></script>
 
 <script>
@@ -100,17 +99,15 @@ function Enemy(canvas) {
     var lifeProp = [];
 
      lifeProp[1] = { color: 'red',   fireP: 0,   numB: 20, daze: 10 };
-
+　　//　var r = false;
     this.draw = function(ctx) {
-
+　　　　
         if (dying) {
             explode.draw(ctx, x, y);
         } else if (1 <= life) {
             ctx.beginPath();
-          //  ctx.fillStyle = lifeProp[life].color;
-            ctx.translate(canvas.width / 2, canvas.height / 2);
-            ctx.rotate(Math.PI);
-            ctx.arc(x, y, 5, 0, Math.PI*2, false);
+          //ctx.fillStyle = lifeProp[life].color;
+          //ctx.arc(x, y, 5, 0, Math.PI*2, false);
             ctx.drawImage(enemyImg, x - 20, y - 20, 40, 40);
             ctx.fill();
         }
@@ -238,7 +235,6 @@ window.onload = function() {
 
     var canvas = document.getElementsByTagName('canvas')[0];
     var ctx = canvas.getContext('2d');
-
     var ctx2 = document.getElementById("cv").getContext("2d");
 
     var w = canvas.width;
@@ -406,7 +402,7 @@ window.onload = function() {
         }
 
         var myR = 3;
-
+　　　　
         drawEnemies && enemies.forEach(function(enemy) {
             enemy.update();
             if (enemy.isAlive()) {
